Fix arrow overlapping text in small breakpoint of Accordion

--- a/src/components/accordion/accordion.scss
+++ b/src/components/accordion/accordion.scss
@@ -19,7 +19,8 @@
   }
 
   &__trigger {
-    @extend %ods-padding-5, %ods-padding-vertical-6-breakpoint-medium, %ods-padding-horizontal-8-breakpoint-medium;
+    @extend %ods-padding-vertical-5, %ods-padding-left-5, %ods-padding-right-11;
+    @extend %ods-padding-vertical-6-breakpoint-medium, %ods-padding-horizontal-8-breakpoint-medium;
 
     border: none;
     background-color: colors.$white;
